update folder layer structure