@@ -68,7 +68,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Nếu bạn dùng Jackson để xử lý JSON -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
@@ -92,6 +91,12 @@
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
 			<version>3.1.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>3.1.10</version>
 		</dependency>
 
 		<dependency>
@@ -128,9 +133,9 @@
 							<artifactId>lombok</artifactId>
 						</path>
 					</annotationProcessorPaths>
-					<source>21</source>
-					<target>21</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<source>17</source>
+					<target>17</target>
+
 				</configuration>
 			</plugin>
 			<plugin>
